[package]
name = "server_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
unsafe_code = "deny"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum.workspace = true
sea-orm.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
# JWT and password hashing
uuid = { version = "1.23.1", features = ["v4"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
getrandom = "0.2"
sha2 = "0.11.0"
hex = "0.4.3"
# Logging
tracing.workspace = true
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

core_db = { path = "../core_db" }
core_domain = { path = "../core_domain" }
alpaca_sdk = { path = "../alpaca_sdk" }
finviz_sdk = { path = "../finviz_sdk" }
